--- a/metav/scss/style.css
+++ b/metav/scss/style.css
@@ -94,18 +94,26 @@ body {
 
 .header {
   position: relative;
-  z-index: 999;
+  z-index: 1;
   margin-bottom: clamp(1.25rem, 0.159rem + 5.45vw, 4.25rem);
 }
 .header__decor {
-  background: radial-gradient(40.5% 39.56% at 50% 50%, rgba(170, 20, 240, 0.28), rgba(170, 20, 240, 0) 100%);
+  background: radial-gradient(40.5% 49.56% at 50% 50%, rgba(170, 20, 240, 0.28), rgba(170, 20, 240, 0) 100%);
   width: 56rem;
   height: 56rem;
   position: absolute;
-  z-index: -1;
+  z-index: -4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   left: 0;
-  right: 0;
-  top: 0;
+  top: 100%;
   -webkit-transform: translateY(-28.125rem);
       -ms-transform: translateY(-28.125rem);
           transform: translateY(-28.125rem);
@@ -313,7 +321,7 @@ body {
           align-items: center;
   margin-bottom: 2.5rem;
   position: relative;
-  z-index: 100;
+  z-index: 99;
 }
 @media (max-width: 63.5625rem) {
   .page-home__buttons {
@@ -324,7 +332,7 @@ body {
 }
 .page-home__first-button {
   position: relative;
-  z-index: 100;
+  z-index: 99;
 }
 .page-home__first-button a {
   font-family: "Poppins", sans-serif;
@@ -333,6 +341,7 @@ body {
   position: relative;
   border-radius: 5px;
   padding: 1rem 1.8125rem;
+  z-index: 99;
 }
 .page-home__first-button a:after {
   content: "";
@@ -361,9 +370,11 @@ body {
 }
 .page-home__second-button {
   position: relative;
-  z-index: 100;
+  z-index: 99;
 }
 .page-home__second-button a {
+  position: relative;
+  z-index: 999;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-size: clamp(1.125rem, 1.05rem + 0.27vw, 1.25rem);
@@ -971,13 +982,13 @@ body {
 }
 
 .header__container {
-  -webkit-transform: translateY(-100px);
-      -ms-transform: translateY(-100px);
-          transform: translateY(-100px);
+  -webkit-transform: translateY(-50px);
+      -ms-transform: translateY(-50px);
+          transform: translateY(-50px);
   opacity: 0;
 }
 
-.header.vis .header__container {
+.header__container.vis {
   -webkit-transform: translateY(0);
       -ms-transform: translateY(0);
           transform: translateY(0);
