--- a/XpenseProject/scss/style.scss
+++ b/XpenseProject/scss/style.scss
@@ -17,7 +17,7 @@ body {
     max-width: toRem(1140);
     padding: 0 toRem(15);
     margin: 0 auto;
-    border: 1px solid black;
+    // outline: 1px solid black;
 }
 
 .wrapper {
@@ -27,7 +27,7 @@ body {
 }
 
 .header {
-    margin-top: toRem(60);
+    margin-top: clamp(0rem, -10.216rem + 20.69vw, 3.75rem);
     &__container {
         display: flex;
         align-items: center;
@@ -101,8 +101,8 @@ body {
                 left: 0;
             }
         }
-        &--button{
-            @media(min-width: toRem(570)){
+        &--button {
+            @media (min-width: toRem(570)) {
                 display: none;
             }
         }
@@ -111,7 +111,7 @@ body {
     // .header__button
 
     &__button {
-        @media(max-width: toRem(570)){
+        @media (max-width: toRem(570)) {
             display: none;
         }
         a {
@@ -174,3 +174,242 @@ body {
         }
     }
 }
+
+.main-page {
+    // .main-page__container
+    padding-bottom: toRem(219);
+    &__container {
+        padding-top: clamp(2.188rem, -0.882rem + 10.68vw, 7.125rem);
+        padding-bottom: clamp(2.5rem, -4.454rem + 24.19vw, 13.688rem);
+        display: flex;
+        column-gap: toRem(30);
+        overflow: hidden;
+    }
+
+    // .main-page__title
+
+    &__title {
+        font-weight: 700;
+        font-size: clamp(2.125rem, -0.284rem + 8.38vw, 6rem);
+        line-height: 100%;
+        color: var(--dark);
+        max-width: toRem(540);
+        margin-bottom: toRem(25);
+    }
+
+    // .main-page__paragraph
+
+    &__paragraph {
+        margin-bottom: clamp(0.875rem, -0.174rem + 3.65vw, 2.563rem);
+    }
+
+    // .main-page__button
+
+    &__button {
+        display: flex;
+        column-gap: toRem(24);
+        align-items: center;
+        @media (max-width: toRem(1100)) {
+            justify-content: center;
+        }
+
+        button {
+            padding: clamp(0.875rem, 0.72rem + 0.54vw, 1.125rem) clamp(1.125rem, 0.892rem + 0.81vw, 1.5rem);
+            border-radius: 8px;
+            background: var(--main-color);
+            color: #fff;
+            font-size: clamp(1.125rem, 0.892rem + 0.81vw, 1.5rem);
+            display: flex;
+            align-items: center;
+            column-gap: toRem(14);
+            svg {
+                transition: transform 0.4s;
+            }
+            &:hover {
+                svg {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+        & .paragraph {
+            @media (max-width: toRem(550)) {
+                display: none;
+            }
+        }
+    }
+
+    &__info-content {
+        @media (max-width: toRem(1100)) {
+            justify-content: center;
+            margin: 0 auto;
+            text-align: center;
+        }
+    }
+
+    &__anim-content {
+        @media (max-width: toRem(1100)) {
+            display: none;
+        }
+        position: relative;
+
+        img {
+            position: absolute;
+        }
+    }
+    &__window {
+        padding-left: toRem(150);
+        animation: window 1.2s ease-out 1.1s forwards;
+        transform: translateX(500px);
+        opacity: 0;
+        @keyframes window {
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+    }
+    &__table {
+        padding-top: toRem(210);
+        padding-left: toRem(295);
+        z-index: 2;
+        animation: table 0.7s ease;
+        @keyframes table {
+            0% {
+                transform: translateY(400px);
+                opacity: 0;
+            }
+            100% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+    }
+    &__human {
+        padding-top: toRem(88);
+        padding-left: toREm(6.5);
+        animation: human 1.1s 2.3s forwards;
+        transform: translateX(-100px);
+        z-index: 3;
+        opacity: 0;
+        @keyframes human {
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+    }
+    &__right-flowers {
+        margin-top: toRem(109);
+        margin-left: toRem(359);
+        transform: scale(0);
+        animation: flower 0.9s 3.4s forwards;
+    }
+    &__left-flowers {
+        margin-top: toRem(95);
+        margin-left: toRem(309);
+        transform: scale(0);
+        animation: flower 1s 3.6s forwards;
+    }
+    @keyframes flower {
+        100% {
+            transform: scale(1);
+        }
+    }
+    &__moon {
+        margin-left: toRem(59);
+        margin-top: toRem(166);
+        transform-origin: 50% 20px;
+        animation:
+            moon 0.6s 5.8s forwards,
+            moondeg 0.6s 6.8s forwards;
+        opacity: 0;
+        // border: 1px solid black;
+        @keyframes moon {
+            100% {
+                margin-left: toRem(209);
+                margin-top: toRem(48);
+                opacity: 1;
+            }
+        }
+        @keyframes moondeg {
+            0% {
+                transform: rotate(0);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    }
+}
+.paragraph {
+    font-size: toRem(24);
+    color: var(--light);
+}
+
+.present-page {
+    position: relative;
+    // .present-page__left-decor
+    background-color: #ff7235;
+
+    &__left-decor {
+        position: absolute;
+        padding-top: toRem(287);
+    }
+
+    // .present-page__right-decor
+
+    &__right-decor {
+        position: absolute;
+        right: 0px;
+    }
+
+    // .present-page__container
+
+    &__container {
+    }
+
+    // .present-page__img
+
+    &__img {
+        padding-top: toRem(87);
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.main {
+
+    // .main__line-brands
+
+    &__line-brands {
+    }
+}
+.line-brands {
+
+    // .line-brands__container
+
+    &__container {
+        display: flex;
+        overflow: hidden;
+    }
+    &__brand{
+        display: flex;
+        animation: brand 2s linear infinite;
+        img{
+            margin: 0 toRem(30);
+        }
+    }
+    @keyframes brand {
+        0%{
+            transform: translateX(0);
+        }
+        100%{
+            transform: translateX(-100%);
+        }
+        
+    }
+}
+
+
